--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "devDependencies": {
-    "nodemon": "^3.1.11"
+  "name": "khoj",
+  "version": "1.0.0",
+  "description": "Khoj - Community Safety Platform",
+  "private": true,
+  "workspaces": [
+    "frontend",
+    "backend"
+  ],
+  "scripts": {
+    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
+    "dev:backend": "cd backend && npm run dev",
+    "dev:frontend": "cd frontend && npm start",
+    "start:backend": "cd backend && npm start",
+    "start:frontend": "cd frontend && npm start"
   },
-  "dependencies": {
-    "autoprefixer": "^10.4.22",
-    "axios": "^1.13.2",
-    "postcss": "^8.5.6",
-    "react-router-dom": "^7.10.0",
-    "tailwindcss": "^4.1.17"
-  }
+  "keywords": ["community", "safety", "reporting"],
+  "author": "",
+  "license": "ISC"
 }
