--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
+    "leaflet": "^1.9.4",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.10.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.1",
