--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,10 @@ CLIENT_URL=http://localhost:3000
 CLOUDINARY_CLOUD_NAME=dewaqteuz
 CLOUDINARY_API_KEY=379368781154473
 CLOUDINARY_API_SECRET=Ajk8bnPtMPxWnNr8aMAWPg9s94o
+
+# Gmail/Nodemailer Configuration for Email Notifications
+# Your Gmail address
+EMAIL_USER=haquee1111@gmail.com
+# Gmail App Password (NOT your regular password)
+# Generate at: https://myaccount.google.com/apppasswords
+EMAIL_APP_PASSWORD=smkakfbxssxuatjr
