--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,9 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.11",
+    "resend": "^6.6.0",
+    "socket.io": "^4.8.1"
   }
 }
