--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@marsidev/react-turnstile": "^1.4.0",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^1.41.3",
     "connect-mongo": "^5.1.0",
