--- a/frontend/.env
+++ b/frontend/.env
@@ -4,3 +4,6 @@ REACT_APP_API_URL=
 
 # Socket.IO server URL
 REACT_APP_SOCKET_URL=http://localhost:5001
+
+# Cloudflare Turnstile Site Key
+REACT_APP_TURNSTILE_SITE_KEY=1x00000000000000000000AA #dummykey
