--- a/frontend/.env
+++ b/frontend/.env
@@ -6,4 +6,4 @@ REACT_APP_API_URL=
 REACT_APP_SOCKET_URL=http://localhost:5001
 
 # Cloudflare Turnstile Site Key
-REACT_APP_TURNSTILE_SITE_KEY=1x00000000000000000000AA #dummykey
+REACT_APP_TURNSTILE_SITE_KEY=0x4AAAAAACJPWVrYyeVeTkNe
