--- a/backend/.env
+++ b/backend/.env
@@ -15,3 +15,6 @@ EMAIL_USER=haquee1111@gmail.com
 # Gmail App Password (NOT your regular password)
 # Generate at: https://myaccount.google.com/apppasswords
 EMAIL_APP_PASSWORD=smkakfbxssxuatjr
+
+#turnstile secret key
+TURNSTILE_SECRET_KEY=0x4AAAAAACJPWdAXY2tPeebQ_qgWLH6JAeo
