--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,8 +4,13 @@
 # MongoDB Connection
 MONGODB_URI=mongodb://localhost:27017/khoj
 
-# Session Secret (change this to a random string)
+# REQUIRED: Session Secret (MUST be set - generate a strong random string)
+# Generate with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
 SESSION_SECRET=your-secret-key-change-this-to-something-random
+
+# REQUIRED: JWT Secret for Admin Authentication (MUST be set)
+# Generate with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+JWT_SECRET=your-jwt-secret-change-this-to-something-random
 
 # Cloudinary Configuration
 CLOUDINARY_CLOUD_NAME=your_cloud_name
